# chatbot

./: .env.example  pyproject.toml
app/: config.py
app/agents/: state.py
app/gateway/: client.py
app/guardrails/: rails.py
app/ingestion/: processor.py
app/services/retrieval/: embedding.py  qdrant_service.py
