[project]
name = "chatbot"
version = "0.1.0"
description = "Enterprise Agentic RAG Chatbot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "deepeval>=4.0.7",
    "fastapi>=0.128.8",
    "flashrank>=0.2.10",
    "google-generativeai>=0.8.6",
    "langchain>=0.3.30",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.0.10",
    "langchain-google-vertexai>=2.1.2",
    "langchain-groq>=0.3.8",
    "langchain-nvidia-ai-endpoints>=0.3.19",
    "langchain-openai>=0.3.35",
    "langfuse>=3.7.0",
    "langgraph>=0.6.11",
    "langsmith>=0.4.37",
    "logfire[fastapi,requests]>=4.32.1",
    "loguru>=0.7.3",
    "nemoguardrails>=0.17.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.0.2",
    "pdfplumber>=0.11.8",
    "portkey-ai>=2.3.2",
    "pydantic>=2.0.0",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "pytz>=2026.2",
    "qdrant-client>=1.16.1",
    "ragas>=0.4.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.50.0",
    "unstructured>=0.18.3",
    "uvicorn[standard]>=0.39.0",
]
